--- a/os/linux/arm64/crypto/keccak/Makefile
+++ b/os/linux/arm64/crypto/keccak/Makefile
@@ -1,7 +1,7 @@
 test:
-		yasm -felf32 k200x.asm -ok200x.o
-		yasm -felf32 k800x.asm -ok800x.o
-		gcc -m32 -Os -Wall test.c k200x.o k800x.o -otest		
+	cpp -E kpp.s > kx.s
+	as kx.s -okx.o
+	gcc -Os -Wall test.c k200.c k800.c kx.o -otest		
 
 clean:
 	rm *.o test
