--- a/os/linux/arm64/crypto/present/Makefile
+++ b/os/linux/arm64/crypto/present/Makefile
@@ -1,6 +1,6 @@
 test:
-	yasm -fbin -DBIN px.asm -opx.bin
-	yasm -felf64 px.asm -opx.o
+	cpp -E pp.s > px.s
+	as px.s -opx.o
 	gcc -Wall test.c px.o -otest
 clean:
 	rm *.o test
