--- a/os/linux/x86/crypto/x25519/Makefile
+++ b/os/linux/x86/crypto/x25519/Makefile
@@ -5,13 +5,13 @@ test:
 	nasm -DBIN -fbin expmod.asm -oexpmod.bin
 	nasm -DBIN -fbin cswap.asm  -ocswap.bin
 	nasm -DBIN -fbin modulo.asm -omodulo.bin
-	nasm -felf64 addmod.asm -oaddmod.o
-	nasm -felf64 submod.asm -osubmod.o
-	nasm -felf64 mulmod.asm -omulmod.o
-	nasm -felf64 expmod.asm -oexpmod.o
-	nasm -felf64 cswap.asm -ocswap.o
-	nasm -felf64 modulo.asm -omodulo.o
-	gcc -Os -Wall test.c addmod.o submod.o mulmod.o expmod.o cswap.o modulo.o x25519.c curve64.c -otest
+	nasm -felf32 addmod.asm -oaddmod.o
+	nasm -felf32 submod.asm -osubmod.o
+	nasm -felf32 mulmod.asm -omulmod.o
+	nasm -felf32 expmod.asm -oexpmod.o
+	nasm -felf32 cswap.asm -ocswap.o
+	nasm -felf32 modulo.asm -omodulo.o
+	gcc -m32 -Os -Wall test.c addmod.o submod.o mulmod.o expmod.o cswap.o modulo.o x25519.c curve64.c -otest
 
 clean:
 	rm *.o test
