--- a/os/linux/c/ssltls/Makefile
+++ b/os/linux/c/ssltls/Makefile
@@ -1,5 +1,5 @@
 tls:
-	gcc -N -O0 -fno-stack-protector -nostdlib tls.c -fpic -o tls
+	gcc -O0 -nostdlib tls.c -fpic -o tls
 	objcopy -O binary --only-section=.text tls tls.bin
 	xxd -i tls.bin > tls.h
 clean:
